Fixed chip not aligning center

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -210,6 +210,6 @@ h1, h2, p {
   margin-right: 10vw;
 }
 
-.align_Center {
+.align_center {
   text-align: center;
 }
